[tool.poetry]
name = "cvs-customer-service"
version = "0.1.0"
description = "CVS Customer Service Communication Demo"
authors = ["Devin <devin@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
